--- a/Photoshop-01/css/style.css
+++ b/Photoshop-01/css/style.css
@@ -157,10 +157,10 @@ Banner
 .help .help-2 i {
     color: #f48146
 }
-.help .help-2 {
+.help .help-option:hover  {
     box-shadow: 10px 10px 10px 5px #e4e4e4;
 }
-.help p {
+.help a {
     opacity: 0.6;
 }
 /*map
@@ -178,6 +178,54 @@ Banner
     margin: 0 auto;
     font-size: 15px;
     opacity: 0.6;
+}
+.main-content .subscribe {
+    height: 360px;
+    background: linear-gradient(to right, #f66c27, #f09f76);
+    position: relative;
+}
+.main-content .subscribe h1 {
+    font-size:150px;
+    line-height: 360px;
+    opacity: 0.2;
+    color: #f7cab5;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%);
+}
+.main-content .subscribe p {
+    text-align: center;
+    color: white;
+    font-size: 30px;
+    padding: 100px;
+}
+.main-content .subscribe .content-form {
+    position: absolute;
+    left: 50%;
+    top: 60%;
+    transform: translate(-50%);
+}
+.main-content .subscribe .content-form .send-email{
+    height: 40px;
+}
+.main-content .subscribe .content-form .send-email input {
+    width: 480px;
+    height: 40px;
+    border-radius: 50px;
+    padding: 20px;
+    margin: 10px;
+    background-color: #f3f2f2;
+    border: none
+}
+.main-content .subscribe .content-form .send-email input[type="submit"] {
+    width: 150px;
+    float: right;
+    padding: 0px;
+    background-color: #f48146;
+    box-shadow: 5px 5px 15px #be6c43;
 }
 /*
 Footer CSS
