--- a/Photoshop-01/css/style.css
+++ b/Photoshop-01/css/style.css
@@ -205,7 +205,7 @@ Banner
 .main-content .subscribe .content-form {
     position: absolute;
     left: 50%;
-    top: 60%;
+    top: 65%;
     transform: translate(-50%);
 }
 .main-content .subscribe .content-form .send-email{
@@ -216,7 +216,7 @@ Banner
     height: 40px;
     border-radius: 50px;
     padding: 20px;
-    margin: 10px;
+    margin-left: 10px;
     background-color: #f3f2f2;
     border: none
 }
