--- a/Photoshop-01/css/style.css
+++ b/Photoshop-01/css/style.css
@@ -214,6 +214,29 @@ Banner
     background-color: #f48146;
     box-shadow: 5px 5px 15px #be6c43;
 }
+/*project
+*/
+.project {
+    margin: 100px 0px;
+}
+.project a {
+    background-color:rgb(255, 102, 0);
+    display: inline-block;
+    border-radius: 50px ; 
+    width: 150px;
+    height: 40px;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    padding: 5px;
+    line-height: 30px;
+    box-shadow: 5px 5px 10px #bbbbbb;
+}
+
+.project .content {
+    margin-bottom: 60px;
+    text-align: justify;
+}
 /*
 Footer CSS
 */
